# Arcx

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: config.default.toml  config.dev.toml  config.prod.toml
crates/arcx-cli/: Cargo.toml  README.md
crates/arcx-cli/src/: dev.rs  main.rs
crates/arcx-core/: Cargo.toml  README.md
crates/arcx-core/src/: context.rs  ctx.rs  error.rs  lib.rs  service_macro.rs
crates/arcx-core/src/client/: event_bus.rs  registry.rs
crates/arcx-core/src/config/: mod.rs
crates/arcx-core/src/guard/: auth.rs  mod.rs
crates/arcx-core/src/middleware/: cors.rs  mod.rs  request_logger.rs
crates/arcx-core/src/middleware/security/: mod.rs
crates/arcx-core/src/plugin/: mod.rs
crates/arcx-core/src/router/: mod.rs
crates/arcx-core/src/schedule/: manager.rs
crates/arcx-core/src/session/: mod.rs
crates/arcx-core/src/ws/: handler.rs
crates/arcx-macros/: Cargo.toml
crates/arcx-macros/src/: lib.rs
examples/demo/: Cargo.toml
examples/demo/config/: config.default.toml
examples/demo/src/: helper.rs  main.rs  prelude.rs  router.rs
examples/demo/src/controller/: admin.rs  health.rs  home.rs  mod.rs
examples/demo/src/helper/: mod.rs  response.rs
examples/demo/src/middleware/: auth.rs
examples/demo/src/service/: mod.rs  order.rs  user.rs
src/: context.rs  error.rs  extract.rs  lifecycle.rs  main.rs
src/cli/: main.rs
src/client/: example.rs  mod.rs
src/config/: mod.rs  watcher.rs
src/controller/: echo_ws.rs  health.rs  mod.rs  user.rs
src/guard/: auth.rs
src/httpclient/: mod.rs
src/logger/: mod.rs  trace_id.rs
src/middleware/: mod.rs  request_logger.rs
src/middleware/security/: csrf.rs  headers.rs  mod.rs
src/model/: mod.rs  user.rs
src/plugin/: mod.rs
src/plugin/builtin/: database.rs  jwt.rs  mod.rs
src/router/: mod.rs
src/schedule/: mod.rs
src/service/: demo_jobs.rs  mod.rs  user.rs
src/session/: store.rs
src/ws/: handler.rs  mod.rs  session.rs
