[package]
name = "arcx"
version = "0.1.0"
edition = "2021"
description = "A convention-over-configuration web framework with AI orchestration capabilities"
authors = ["name-q <1620206666@qq.com>"]
default-run = "arcx-server"

# 框架服务入口
[[bin]]
name = "arcx-server"
path = "src/main.rs"

# CLI 脚手架工具
[[bin]]
name = "arcx"
path = "src/cli/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono"] }
chrono = "0.4"
validator = { version = "0.18", features = ["derive"] }

# Database
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

# JWT & Auth
jsonwebtoken = "9"

# Async trait support
async-trait = "0.1"

# Schedule
tokio-cron-scheduler = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }
