[package]
name = "arcx-cli"
version = "0.1.4"
edition = "2021"
description = "CLI tool for Arcx framework - project scaffolding and code generation"
authors = ["name-q <1620206666@qq.com>"]
license = "MIT"
repository = "https://github.com/name-q/Arcx"
keywords = ["cli", "framework", "scaffold", "generator"]
readme = "README.md"

[[bin]]
name = "arcx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
notify = "6"
notify-debouncer-mini = "0.4"
nix = { version = "0.29", features = ["signal", "process"] }
ctrlc = "3"
