[package]
name = "arcx-macros"
version = "0.1.4"
edition = "2021"
description = "Procedural macros for Arcx framework"
authors = ["name-q <1620206666@qq.com>"]
license = "MIT"
repository = "https://github.com/name-q/Arcx"
keywords = ["web", "framework", "macros"]
categories = ["web-programming::http-server"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
