[package]
name = "arcx-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
arcx-core = { path = "../../crates/arcx-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
validator = { version = "0.18", features = ["derive"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
